--- a/multicopy_taxa_report.Rmd
+++ b/multicopy_taxa_report.Rmd
@@ -39,16 +39,16 @@ Include some kind of results - 5% of ambiguous clusters
 As a initial attempt to develop a method that not only corrects for copy number but also taxonomic classification, we applied a simple set of linear constraints.  The linear constriants were unable to model the copy number mixed taxonomy clusters, we conclude the report with a discussion of other potential models that can be applied to address this issue.
 
 ## Introduction
-Surveys of microbial communities aim to quantify the abundance of constituent microbes through the measurement of amplified segments of genomic DNA. Genes that produce ribosomal RNA, specifically the 16S rRNA sub-sequence, are favored targets for amplification and measurement because their high degree of conservation makes these genes an attractive basis for phylogenetic analysis and taxonomic identification. Thus, these genes are generally favored over other possible sequences despite disadvantages including, multiple gene copies within a genome and taxonomic ambiguity due to horizontal gene transfer [@Vos2012].
+Microbial community surveys aim to characterize the identity and abundance of prokaryotic organisms within a sample. One method for characterize microbial comminities is by selectively sequencing the marker genes from prokaryotic genomes in the sample. Genes that produce ribosomal RNA, specifically the 16S rRNA gene, is most commonly marker gene because as it contain both conserved and variable regions which faciliate amplification and taxonomic identification respectively [@Wooley2010]. Thus, these genes are generally favored over other possible sequences despite disadvantages including, multiple gene copies within a genome and taxonomic ambiguity due to horizontal gene transfer [@Vos2012].
 
-16S rRNA metagneomic datasets are commonly analyzed by clustering sequences based on a defined similarity. Edit distance, or the number of changes required to convert one sequence into another, is useful as a metric of pairwise similarity [@Ghodsi2011]. Clusters are defined as OTU, operational taxonomic units, and OTU counts are the number of sequences assigned to a cluster. Clusters are commonly termed as operational taxonomic units (OTUs); OTUs are considered to be proxies for organismal abundance [@Wooley2010]. Multiple 16S rRNA gene copies will bias the OTU counts as the number of sequences is not equivalent to the abundance of cells within the population being sampled assigned to the cluster [@Kembel2012]. Databases have been developed to characterize the number of gene copies per prokaryotic genome have been developed [@Stoddard2014; @Perisin2015], however these databases do not include the 16S rRNA gene copy sequences. A number of methods to normalize the OTU count values based on copy number estimates have been developed [@Kembel2012; @Angly2014; @Perisin2015]. All of these methods use a single copy number correction value for individual OTUs, therefore bacterial strains with different copy numbers assigned to a single OTU can bias the correction factor. The mutiple gene copy number and diversity of the gene copies within a genome either due to mutations or horizontal gene transfer [@Pei2010; @Koeppel2013] futher challenges copy number correction as assignment of gene copies to multiple clusters is not accounted for.  Additionally, due to horizontal gene transfer a 16S rRNA gene copy is a genome can be more similar to a 16S rRNA gene from a unrealted taxa than to other gene copies within the same genome.  No cluster taxonomic annotation methods take account for single genome multiple cluster assignment.
+16S rRNA metagneomic datasets are commonly analyzed by clustering sequences based on a defined similarity. Edit distance, or the number of changes required to convert one sequence into another, is used for computing pairwise similarity [@Ghodsi2011]. Clusters are commonly termed as operational taxonomic units (OTUs); OTUs are considered to be proxies for organismal abundance [@Wooley2010]. The number of sequences assigned to an OTU, OTU counts, are used to determine the relative abundance of OTUs within a community.  Multiple 16S rRNA gene copies will bias the OTU counts as the number of sequences is not equivalent to the abundance of cells within the sampled population [@Kembel2012]. Databases characterizing the number of gene copies per prokaryotic genome exist [@Stoddard2014; @Perisin2015]. However, these databases do not include the 16S rRNA gene copy sequences, only gene copy number. A number of methods to normalize OTU count values based on copy number estimates have been developed [@Kembel2012; @Angly2014; @Perisin2015]. All of these methods use a single copy number correction value for individual OTUs, therefore prokaryotic strains with different copy numbers assigned to a single OTU can bias the correction factor. Copy number correction is further challenged as gene copies within a genome, either due to mutations or horizontal gene transfer, may be assigned to multiple OTUs [@Pei2010; @Koeppel2013].  Additionally, due to horizontal gene transfer a 16S rRNA gene copy in a genome can be more similar to a 16S rRNA gene from a unrealted taxa than to other gene copies within the same genome.  No cluster taxonomic annotation methods take account single genome multi-cluster assignments.
 
-To address this issue we have developed a 16S rRNA gene copy sequence database.  The extent to whic h the number of gene copies per genome assigned to a cluster and number of clusters individual genomes were assigned was characterized using the gene copy sequence database.  We then attempted to develop a new method for copy number correction that accounts for the different numbers of assigned gene copies per cluster and genomes with multiple cluster assignments.  
+To address this issue we developed a 16S rRNA gene copy sequence database.  The database was then used to characterize the extent to which the number of gene copies per genome assigned to a cluster and number of clusters individual genomes were assigned.  We then attempted to develop a new method for copy number correction accounting for the differences in the number of assigned gene copies per cluster and genomes with multiple cluster assignments.  
 
 ## Methods
-We downloaded 2943 microbial genomes and their taxonomic information from NCBI RefSeq (ftp://ftp.ncbi.nlm.nih.gov/genomes/Bacteria) [@Pruitt2012]. 16S rRNA gene sequences were extracted from the genomes using rnammer (http://www.cbs.dtu.dk/cgi-bin/sw_request?rnammer)[@Lagesen2007]. The extracted 16S rRNA genes were clustered with dnaclust [@Ghodsi2011]. THe sequences were clustered for a range of threshold values, where similarity scores for all pairwise comparisons of sequences within a cluster must be above the threshold value. Similarity score equals 1 - (edit distance)/length(shortest string), and ranges from 0 to 1. Typical threshold values used in 16S rRNA metagenomic studies range from 0.95 to 0.99; however, we investigate thresholds as low as 0.61 and as high as 1.00. Exploratory data analysis was performed in R.
+To generate the database we downloaded 2943 microbial genomes and their taxonomic information from NCBI RefSeq (ftp://ftp.ncbi.nlm.nih.gov/genomes/Bacteria) [@Pruitt2012]. 16S rRNA gene sequences were extracted from the genomes using rnammer (http://www.cbs.dtu.dk)[@Lagesen2007]. The extracted 16S rRNA genes were then clustered with dnaclust [@Ghodsi2011]. The sequences were clustered at a range of threshold values, where similarity scores for all pairwise comparisons of sequences within a cluster must be above the threshold value. Similarity score equals 1 - (edit distance)/length(shortest string), and ranges from 0 to 1. Typical threshold values used in 16S rRNA metagenomic studies range from 0.95 to 0.99; however, we investigate thresholds as low as 0.61 and as high as 1.00. The 16S rRNA gene sequences were annotated using the NCBI taxonomy database. An SQLite database was first generated using the taxit python package (http://fhcrc.github.io/taxtastic). Characerization of the number of gene copies per genome assigned to a cluster and number of assigned clusters gene copies for a genome was done using the R statistical programming language [@R]. A phylogenetic tree was used to further characterize the phylogenetic distribution to genomes with 16S rRNA gene copies assigned to multiple clusters. Multiple sequence alignment and phylogeny reconstruction methods used were based on thoes use in [@Kembel2012]. Multiple sequence alignment performed using infernal [@Nawrocki2013] using the reference alignment for bacterial small subunit rRNA (http://rfam.xfam.org).
 
-See `multicopy_taxa_code.pdf` detailed methods including bash scripts and commands.
+See `multicopy_taxa_code.pdf` for methods used to generate the database  including bash scripts and commands.
 
 ## Results and Discussion
 ### 16S rRNA Multicopy Database
@@ -63,7 +63,7 @@ copy_count <- cluster_df %>%
     group_by(gi) %>% summarize(copies = n())
 ```
 
-A database of 16S rRNA gene copy sequences was generated by extracting 16S rRNA gene sequences from all closed bacterial genomes in the NCBI RefSeq database.  Number of 16S rRNA gene copies per genome ranged from `r min(copy_count$copies)` to `r max(copy_count$copies)` with a median of `r median(copy_count$copies)` (`r figr(label = "copyDist", prefix = TRUE, link = TRUE, type = "Figure")`). The distribution of 16S rRNA gene copy numbers agrees with previous studies [@Angly2014; @Vetrovsky2013], exluding a genome with 16S rRNA gene copies. Only a single method was used to identify 16S rRNA gene copy sequences and therefore may contain sequences that were incorrectly identified as 16S rRNA genes, as indicated by outliers in the database phylogenetic tree (`r figr(label = "fullTree", prefix = TRUE, link = TRUE, type = "Figure")`). Therefore the results below are presented as a proof of concept. A more rigorus approach to generating the sequence copy database similar to that used in Angly et al. (2014) would help validate the database. 
+A database of 16S rRNA gene copy sequences was generated by extracting 16S rRNA sequences from all closed bacterial genomes in the NCBI RefSeq database.  Number of 16S rRNA gene copies per genome ranged from `r min(copy_count$copies)` to `r max(copy_count$copies)` with a median of `r median(copy_count$copies)` (`r figr(label = "copyDist", prefix = TRUE, link = TRUE, type = "Figure")`). The distribution of 16S rRNA gene copy numbers agrees with previous studies [@Angly2014; @Vetrovsky2013], excluding a genome with 16 gene copies. Only a single method was used to identify 16S rRNA gene copy sequences and therefore may contain incorrectly classified sequences , as indicated by outliers in the database phylogenetic tree (`r figr(label = "fullTree", prefix = TRUE, link = TRUE, type = "Figure")`). Therefore the results below are presented as a proof of concept. A more rigorus approach to generating the sequence copy database similar to that used in Angly et al. (2014) would help validate the database. 
 
 ```{r copyDist, anchor = "Figure", fig.align="center", echo=FALSE, message=FALSE, fig.cap="Distribution in the number of gene copies present in a bacterial genome.", fig.height=3,fig.width=3}
 ## Potentially drop plot, try to incorporate results into other figure
@@ -90,7 +90,7 @@ ggplot(cluster_df_size) + geom_boxplot(aes(x = threshold, y = size)) +
 ```
 
 ### Cluster Copy Number 
-The number of 16S rRNA gene copies from a single genome within a cluster varies. The variabily in copy number within a cluster biases copy number correction when only a single value in copy number correction (`r figr(label = "copyNumVar", prefix = TRUE, link = TRUE, type = "Figure")`).  Single cluster copy number value is currently the only method used in copy number correction [@Kembel2012; @Angly2014; @Stoddard2014; @Perisin2015].  CopyRighter [@Angly2014], attempts to address this issue by defining the cluster copy number correction value proportionally based on the copy number of the species assigned to a cluster.  
+The number of 16S rRNA gene copies from a single genome within a cluster varies. The variabily in copy number within a cluster biases copy number correction when only a single value is used (`r figr(label = "copyNumVar", prefix = TRUE, link = TRUE, type = "Figure")`).  Single cluster copy number is currently the only method used in copy number correction [@Kembel2012; @Angly2014; @Stoddard2014; @Perisin2015].  CopyRighter [@Angly2014], attempts to address this issue by defining the cluster copy number correction value proportionally based on the copy number of the species assigned to a cluster.  
 
 ```{r echo = FALSE}
 cluster_copy_number <- cluster_df %>% group_by(threshold, id, gi, count) %>% summarise(size = n()) 
@@ -124,7 +124,7 @@ p <- p + labs( x = "Threshold", fill = "Cluster Type") +
 p
 ```
 
-Assignment of 16S rRNA gene sequences from a single genome to multiple clusters further confound the use of single copy nuber correction values. While 16S rRNA gene copies from a single genome are assigned to only one cluster, a number of genomes have 16S rRNA gene sequences assigned to multiple clusters (`r figr(label = "ambigAssign", prefix = TRUE, link = TRUE, type = "Figure")`).  Lowering the clustering threshold has little effect on the number of clusters copies of the 16S rRNA gene is assigned to for a genome. The database used in this analysis was generated using only a single method for 16S rRNA gene extraction.  Visualization of the database phylogeny indicates that a number of outlier sequences are included in the database which are likely responsible for a few of the multiple cluster genome sequence copy assignments, especially thoes with mutiple assigned clusters when using lower threshold values.
+Assignment of 16S rRNA gene sequences from a single genome to multiple clusters further confounds the use of single copy nuber correction values. While 16S rRNA gene copies from a single genome are assigned to only one cluster, a number of genomes have 16S rRNA gene sequences assigned to multiple clusters (`r figr(label = "ambigAssign", prefix = TRUE, link = TRUE, type = "Figure")`).  Lowering the clustering threshold has little effect on the number of clusters 16S rRNA gene copies within a a genome are assigned. The database used in this analysis was generated using only a single method for 16S rRNA gene extraction.  Visualization of the database phylogeny indicates that a number of outlier sequences are included in the database and is likely responsible for a few of the multiple cluster genome assignments, especially those with multiple assigned clusters when using lower threshold values.
 
 ```{r echo=FALSE, warning=FALSE, message=FALSE}
 cluster_df_ambig <- cluster_copy_number %>% group_by(threshold, gi) %>% 
@@ -181,7 +181,7 @@ min_ambig_lt97 <- anno_count_fig_df %>% ungroup() %>%
     filter(threshold < 0.97) %>% .$ambig_prop %>% min() %>% round(2)
 ```
 
-Taxonomic ambiguity for 97% clustering threshold, >5% cluster classification error rate for genus and species level classifications (`r figr(label = "taxaAmbig", prefix = TRUE, link = TRUE, type = "Figure")`). For clustering thresholds less than 0.97, the proportion of taxonomically ambiguous clusters is greater than `r min_ambig_lt97`. When analyzing 16S rRNA metagenomic datasets, the presence of taxonomically ambiguous clusters must be taken into consideration. 
+Greater than 5% cluster classification error rate was observed for genus and species level classifications when using for 97% clustering threshold,  (`r figr(label = "taxaAmbig", prefix = TRUE, link = TRUE, type = "Figure")`). For clustering thresholds less than 0.97, the proportion of taxonomically ambiguous clusters is greater than `r min_ambig_lt97`. This taxonomic ambiguity can lead to biases in cluster taxonomic classifications.
 
 ```{r taxaAmbig, anchor="Figure", fig.align="center",echo=FALSE, message=FALSE, fig.cap="Proportion of cluster with more than one assigned taxa by clustering threshold and taxonomic level.", , fig.height=4,fig.width=6}
 anno_count_fig_df %>%  
@@ -214,7 +214,7 @@ non_ambig_node_labels <- cluster_97_name_key %>% filter(ambig != "multiple") %>%
     .$rep_name %>% unique()
 ```
 
-The phylogenetic distribution of ambiguous clusters (`r figr(label = "ambigTree", prefix = TRUE, link = TRUE, type = "Figure")`). When clustering at the 0.97 threshold and using genus level taxonomic annotation, sequences belonging to clusters with multiple assigned taxa are distributed throughout the phylogenetic tree. The wide distribution of sequences assigned to ambiguous clusters indicates that ambiguity in cluster taxonomic annotation is challenges taxonomic classification issues for a majority of taxonomic lineages.
+When clustering at the 0.97 threshold and using genus level taxonomic annotation, sequences belonging to clusters with multiple assigned taxa are distributed throughout the phylogenetic tree (`r figr(label = "ambigTree", prefix = TRUE, link = TRUE, type = "Figure")`). The wide distribution of sequences assigned to ambiguous clusters indicates that ambiguity in cluster taxonomic annotation challenges taxonomic classification issues for a majority of the taxonomic lineages.
 
 ```{r ambigTree, anchor="Figure", fig.align="center",fig.align="center",echo=FALSE, message=FALSE, fig.cap="16S rRNA gene phylogeny, teal braches indicate 16S rRNA gene sequences assigned to taxonomically ambiguous clusters, at the 0.97 clustering threshold and genus level taxonomic assignment. To provide better branch resolution in the phyogenetic tree, potential outlier 16S rRNA sequences were exlucded from the phylogenetic tree below", fig.height=6,fig.width=6}
 #plot(tree)
