--- a/bibliography.bib
+++ b/bibliography.bib
@@ -180,7 +180,7 @@ year = {2012}
   publisher={Nature Publishing Group}
 }
 
-@Manual{,
+@Manual{R,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
