revised text modified fig size, change full tree plot

--- a/multicopy_taxa_report.Rmd
+++ b/multicopy_taxa_report.Rmd
@@ -39,11 +39,11 @@ Include some kind of results - 5% of ambiguous clusters
 As a initial attempt to develop a method that not only corrects for copy number but also taxonomic classification, we applied a simple set of linear constraints.  The linear constriants were unable to model the copy number mixed taxonomy clusters, we conclude the report with a discussion of other potential models that can be applied to address this issue.
 
 ## Introduction
-Microbial community surveys aim to characterize the identity and abundance of prokaryotic organisms within a sample. One method for characterize microbial comminities is by selectively sequencing the marker genes from prokaryotic genomes in the sample. Genes that produce ribosomal RNA, specifically the 16S rRNA gene, is most commonly marker gene because as it contain both conserved and variable regions which faciliate amplification and taxonomic identification respectively [@Wooley2010]. Thus, these genes are generally favored over other possible sequences despite disadvantages including, multiple gene copies within a genome and taxonomic ambiguity due to horizontal gene transfer [@Vos2012].
+Microbial community surveys aim to characterize the identity and abundance of prokaryotic organisms within a sample. One method for characterizing microbial communinties is by selectively sequencing the marker genes from prokaryotic genomes in the sample. Genes that produce ribosomal RNA, specifically the 16S rRNA gene, is most commonly marker gene because as it contain both conserved and variable regions which faciliate amplification and taxonomic identification respectively [@Wooley2010]. Thus, these genes are generally favored over other possible sequences despite disadvantages including, multiple gene copies within a genome and taxonomic ambiguity due to horizontal gene transfer [@Vos2012].
 
-16S rRNA metagneomic datasets are commonly analyzed by clustering sequences based on a defined similarity. Edit distance, or the number of changes required to convert one sequence into another, is used for computing pairwise similarity [@Ghodsi2011]. Clusters are commonly termed as operational taxonomic units (OTUs); OTUs are considered to be proxies for organismal abundance [@Wooley2010]. The number of sequences assigned to an OTU, OTU counts, are used to determine the relative abundance of OTUs within a community.  Multiple 16S rRNA gene copies will bias the OTU counts as the number of sequences is not equivalent to the abundance of cells within the sampled population [@Kembel2012]. Databases characterizing the number of gene copies per prokaryotic genome exist [@Stoddard2014; @Perisin2015]. However, these databases do not include the 16S rRNA gene copy sequences, only gene copy number. A number of methods to normalize OTU count values based on copy number estimates have been developed [@Kembel2012; @Angly2014; @Perisin2015]. All of these methods use a single copy number correction value for individual OTUs, therefore prokaryotic strains with different copy numbers assigned to a single OTU can bias the correction factor. Copy number correction is further challenged as gene copies within a genome, either due to mutations or horizontal gene transfer, may be assigned to multiple OTUs [@Pei2010; @Koeppel2013].  Additionally, due to horizontal gene transfer a 16S rRNA gene copy in a genome can be more similar to a 16S rRNA gene from a unrealted taxa than to other gene copies within the same genome.  No cluster taxonomic annotation methods take account single genome multi-cluster assignments.
+16S rRNA metagneomic datasets are commonly analyzed by clustering sequences based on a defined similarity. Edit distance, or the number of changes required to convert one sequence into another, is used for computing pairwise similarity [@Ghodsi2011]. Clusters are commonly termed as operational taxonomic units (OTUs); OTUs are considered to be proxies for organismal abundance [@Wooley2010]. The number of sequences assigned to an OTU, OTU counts, are used to determine the relative abundance of OTUs within a community.  Multiple 16S rRNA gene copies will bias the OTU counts as the number of sequences is not equivalent to the abundance of cells within the sampled population [@Kembel2012]. Databases characterizing the number of gene copies per prokaryotic genome exist [@Stoddard2014; @Perisin2015]. However, these databases do not include the 16S rRNA gene copy sequences, only gene copy number. A number of methods to normalize OTU count values based on copy number estimates have been developed [@Kembel2012; @Angly2014; @Perisin2015]. All of these methods use a single copy number correction value for individual OTUs, therefore prokaryotic strains with different copy numbers assigned to a single OTU can bias the correction factor. Copy number correction is further challenged as gene copies within a genome, either due to mutations or horizontal gene transfer, may be assigned to multiple OTUs [@Pei2010; @Koeppel2013].  Additionally, due to horizontal gene transfer, a 16S rRNA gene copy in a genome can be more similar to a 16S rRNA gene from unrelated taxa than to other gene copies within the same genome.  No cluster taxonomic annotation methods take account single genome multi-cluster assignments.
 
-To address this issue we developed a 16S rRNA gene copy sequence database.  The database was then used to characterize the extent to which the number of gene copies per genome assigned to a cluster and number of clusters individual genomes were assigned.  We then attempted to develop a new method for copy number correction accounting for the differences in the number of assigned gene copies per cluster and genomes with multiple cluster assignments.  
+To address this issue, we developed a 16S rRNA gene copy sequence database.  The database was then used to characterize the extent to which the number of gene copies per genome assigned to a cluster and number of clusters individual genomes were assigned.  We then attempted to develop a new method for copy number correction accounting for the differences in the number of assigned gene copies per cluster and genomes with multiple cluster assignments.  
 
 ## Methods
 To generate the database we downloaded 2943 microbial genomes and their taxonomic information from NCBI RefSeq (ftp://ftp.ncbi.nlm.nih.gov/genomes/Bacteria) [@Pruitt2012]. 16S rRNA gene sequences were extracted from the genomes using rnammer (http://www.cbs.dtu.dk)[@Lagesen2007]. The extracted 16S rRNA genes were then clustered with dnaclust [@Ghodsi2011]. The sequences were clustered at a range of threshold values, where similarity scores for all pairwise comparisons of sequences within a cluster must be above the threshold value. Similarity score equals 1 - (edit distance)/length(shortest string), and ranges from 0 to 1. Typical threshold values used in 16S rRNA metagenomic studies range from 0.95 to 0.99; however, we investigate thresholds as low as 0.61 and as high as 1.00. The 16S rRNA gene sequences were annotated using the NCBI taxonomy database. An SQLite database was first generated using the taxit python package (http://fhcrc.github.io/taxtastic). Characerization of the number of gene copies per genome assigned to a cluster and number of assigned clusters gene copies for a genome was done using the R statistical programming language [@R]. A phylogenetic tree was used to further characterize the phylogenetic distribution to genomes with 16S rRNA gene copies assigned to multiple clusters. Multiple sequence alignment and phylogeny reconstruction methods used were based on thoes use in [@Kembel2012]. Multiple sequence alignment performed using infernal [@Nawrocki2013] using the reference alignment for bacterial small subunit rRNA (http://rfam.xfam.org).
@@ -63,7 +63,7 @@ copy_count <- cluster_df %>%
     group_by(gi) %>% summarize(copies = n())
 ```
 
-A database of 16S rRNA gene copy sequences was generated by extracting 16S rRNA sequences from all closed bacterial genomes in the NCBI RefSeq database.  Number of 16S rRNA gene copies per genome ranged from `r min(copy_count$copies)` to `r max(copy_count$copies)` with a median of `r median(copy_count$copies)` (`r figr(label = "copyDist", prefix = TRUE, link = TRUE, type = "Figure")`). The distribution of 16S rRNA gene copy numbers agrees with previous studies [@Angly2014; @Vetrovsky2013], excluding a genome with 16 gene copies. Only a single method was used to identify 16S rRNA gene copy sequences and therefore may contain incorrectly classified sequences , as indicated by outliers in the database phylogenetic tree (`r figr(label = "fullTree", prefix = TRUE, link = TRUE, type = "Figure")`). Therefore the results below are presented as a proof of concept. A more rigorus approach to generating the sequence copy database similar to that used in Angly et al. (2014) would help validate the database. 
+A database of 16S rRNA gene copy sequences was generated by extracting 16S rRNA sequences from all closed bacterial genomes in the NCBI RefSeq database.  The number of 16S rRNA gene copies per genome ranged from `r min(copy_count$copies)` to `r max(copy_count$copies)` with a median of `r median(copy_count$copies)` (`r figr(label = "copyDist", prefix = TRUE, link = TRUE, type = "Figure")`). The distribution of 16S rRNA gene copy numbers agrees with previous studies [@Angly2014; @Vetrovsky2013], excluding a genome with 16 gene copies. Only a single method was used to identify 16S rRNA gene copy sequences, and therefore, may contain incorrectly classified sequences, as indicated by outliers in the database phylogenetic tree (`r figr(label = "fullTree", prefix = TRUE, link = TRUE, type = "Figure")`). Therefore, the results below are presented as a proof of concept. A more rigorus approach to generating the sequence copy database similar to that used in Angly et al. (2014) would help validate the database. 
 
 ```{r copyDist, anchor = "Figure", fig.align="center", echo=FALSE, message=FALSE, fig.cap="Distribution in the number of gene copies present in a bacterial genome.", fig.height=3,fig.width=3}
 ## Potentially drop plot, try to incorporate results into other figure
@@ -71,9 +71,9 @@ ggplot(copy_count) + geom_bar(aes(x = copies)) +
     theme_bw() + labs(y = "Number of Genomes", x = "16S rRNA Gene Copies")
 ```
 
-```{r fullTree, anchor = "Figure", fig.align="center", echo=FALSE, message=FALSE, fig.cap="Phylogeny of 16S rRNA gene copy database used in this study. Long branch length indicate potential sequences in the database that were incorrectly identified as 16S rRNA genes by rnammer.", fig.height=6,fig.width=6}
+```{r fullTree, anchor = "Figure", fig.align="center", echo=FALSE, message=FALSE, fig.cap="Phylogeny of 16S rRNA gene copy database used in this study. Long branch length indicate potential sequences in the database that were incorrectly identified as 16S rRNA genes by rnammer.", fig.height=4,fig.width=7}
 tree <- read.tree("infernal_raxml_tree/RAxML_result.infernal_16S_tree")
-ggtree(tree, layout="circular")
+plot.phylo(tree, type="fan" ,show.tip.label = FALSE, open.angle = 120)
 ```
 
 ### Clustering
@@ -83,7 +83,7 @@ The extracted 16S rRNA genes were clustered with dnaclust using a range of thres
 cluster_df_size <- cluster_df %>% group_by(threshold, id) %>% summarise(size = n()) 
 ```
 
-```{r clusterSize, anchor = "figure", fig.align="center", echo=FALSE, message=FALSE, fig.cap="Distribution of cluster size, number of sequences assigned to a cluster, by clustering threshold.", fig.height=4,fig.width=5}
+```{r clusterSize, anchor = "figure", fig.align="center", echo=FALSE, message=FALSE, fig.cap="Distribution of cluster size, number of sequences assigned to a cluster, by clustering threshold.", fig.height=3,fig.width=5}
 ggplot(cluster_df_size) + geom_boxplot(aes(x = threshold, y = size)) + 
     scale_y_log10() + theme_bw() + 
     labs(x = "Clustering Threshold", y = "Sequences per Cluster")
@@ -120,7 +120,7 @@ p <- p + labs( x = "Threshold", fill = "Cluster Type") +
           strip.text = element_text(hjust = 0.02), axis.title.y = element_blank())
 ```
 
-```{r copyNumVar, anchor="Figure", fig.align="center",echo = FALSE, fig.cap = "Variability number of 16S rRNA copies for sequences assigned to a cluster by genome. Top plot is the standard deviation of the copy numbers and bottom plot is the proportion of cluster with multiple copy numbers (Mixed), and single copy number values (Uniform)", fig.height=6,fig.width=6}
+```{r copyNumVar, anchor="Figure", fig.align="center",echo = FALSE, fig.cap = "Variability number of 16S rRNA copies for sequences assigned to a cluster by genome. Top plot is the standard deviation of the copy numbers and bottom plot is the proportion of cluster with multiple copy numbers (Mixed), and single copy number values (Uniform)", fig.height=7,fig.width=7}
 p
 ```
 
