--- a/bibliography.bib
+++ b/bibliography.bib
@@ -180,6 +180,17 @@ year = {2012}
   publisher={Nature Publishing Group}
 }
 
+@article{Patro2014,
+  title={Sailfish enables alignment-free isoform quantification from RNA-seq reads using lightweight algorithms},
+  author={Patro, Rob and Mount, Stephen M and Kingsford, Carl},
+  journal={Nature biotechnology},
+  volume={32},
+  number={5},
+  pages={462--464},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
 @Manual{R,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
